2013-11-03         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (backsmalls2): New test.
	(pipeio3): Check results against pipeio3.ok2 if
	the first check fails.
	* backsmalls2.awk, backsmalls2.ok: New files.
	* pipeio3.ok2: New file. This is the results on PPC Mac OS X.

2013-10-30         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (pipeio3): Enhance test, again, to be more resilient
	to variations in error messages produced by different Bourne shells
	when a command is not found.  This time for Cygwin.

	Unrelated:

	(charasbytes): Translit any tabs to spaces. Should help on
	some System V systems such as Solaris. We hope.

	Unrelated:

	(pass-fail): Exit non-zero if tests fail. Useful for buildbots.

2013-10-22         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (pipeio3): Enhance test to be more resilient to
	variations in error messages produced by different Bourne shells
	when a command is not found. Initially for Mac OS X.

2013-10-17         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (pipeio3): New test.
	* pipeio3.awk, pipeio3.ok: New files.

2013-10-10         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (backbigs1, backsmalls1): New tests.
	* backbigs1.awk, backbigs1.in, backbigs1.ok: New files.
	* backsmalls1.awk, backsmalls1.in, backsmalls1.ok: New files.

2013-10-09         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (badassign1): New test.
	* badassign1.awk, badassign1.ok: New files.

2013-09-13         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am: Fix quoting for generation of Maketests file so
	that it will happen correctly.

	Unrelated:

	* Makefile.am (nfloop): New test.
	* nfloop.awk, nfloop.ok: New files.

2013-08-15         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am: Quote $(srcdir) everywhere so that tests can run
	in locations with spaces in their names (think Windows or Mac OS X).